# sql-explorer

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  conanfile.py  conanfile.txt  project.py
.github/workflows/: Build.yml
conan_profile/: default
src/: credentials.cpp  credentials.h  credsDialog.ui  credsdialog.cpp  credsdialog.h  examples.h  main.cpp  query.h  sqlexplorer.cpp  sqlexplorer.h  sqlexplorer.ui  sqlsearch.cpp  sqlsearch.h  sqlsearch.ui
